@@ -2217,7 +2217,7 @@ LISPFUN(make_string_input_stream,seclass_read,1,2,norest,nokey,0,NIL)
   # fetch String and check range:
   var stringarg arg;
   var object string = test_string_limits_ro(&arg);
-  var object start_arg = fixnum(arg.offset+arg.index); /* start-Argument (Fixnum >=0) */
+  var object start_arg = fixnum(arg.index); /* start-Argument (Fixnum >=0) */
   var object end_arg = fixnum_inc(start_arg,arg.len); # end-Argument (Fixnum >=0)
   pushSTACK(string); # save String
   var object stream = # new Stream, only READ-CHAR allowed
@@ -8719,6 +8719,9 @@ global char** lisp_completion (char* text, int start, int end) {
       }
       unwind_HANDLER_frame();
     catch_return:
+      /* Here we need the values of array and ptr. Avoid gcc warnings. */
+      unused &array; /* avoid "'array' might be clobbered by 'longjmp'" */
+      unused &ptr;   /* avoid "'ptr' might be clobbered by 'longjmp'" */
       skipSTACK(3); # unwind CATCH frame
       STACK_0 = Cdr(STACK_0);
     }
@@ -16509,8 +16512,7 @@ LISPFUN(file_position,seclass_default,1,1,norest,nokey,0,NIL)
             pushSTACK(TheStream(stream)->strm_str_in_begindex);
             pushSTACK(fixnum_inc(STACK_0,pos_off));
             test_string_limits_ro(&arg);
-            TheStream(stream)->strm_str_in_index =
-              fixnum(arg.offset+arg.index+arg.len);
+            TheStream(stream)->strm_str_in_index = fixnum(arg.index+arg.len);
             value1 = fixnum(arg.len); /* == pos */
             break;
           case POS_QUERY:       /* ask for position */
